 - MachineLearning API update: Tagging API
 - IoT API update: ListPolicyPrincipals
 - EC2 API update: GetConsoleOutput, DescribeAllSpotFleetRequests 
 - SSM API update: Tagging
 - SNS API update: sending SMSs' to international phones
 - SES API update: SetIdentityHeadersInNotificationsEnabled added
 - S3 API update: ListObjectsV2 StartAfter attribute fix

0.26 29 May 2016
 - New Service: Discovery
 - New Service: ApplicationAutoScaling
 - KMS API update
 - ECS API update
 - CloudTrail API update
 - S3 API update: new ListObjectsV2 method
 - ApiGateway API update: Passthrough behaviour
 - SSM API update: Modify and Describe DocumentPermission
 - StorageGateway API update: ListTapes
 - EC2 API update: DescribeSecurityGroupReferences and DescribeStaleSecurityGroups
 - CloudFormation API update
 - EMR API update: ListInstances can filter
 - Workspaces API update: Tagging operations
 - EC2 API update: GetConsoleScreenshot and ProvisionedBandwidth
 - Firehose API update: RetryOptions
 - RDS API update: Describe and Modify DBClusterSnapshotAttributes
 - ECS API update: filter by task status

0.25 05 May 2016
 - Call retries are now done in more cases (Thottling errors, 500, 503, 509). PR #96 (wiof)
 - New service: Cognito SignUp/Login (CognitoIdp)
 - Cognito Identity API update: add Cognito Idp support
 - IoT API update: Delete certificates and registrations
 - S3 API Update: Bucket Acceleration enabling methods
 - Kinesis API update: Get iterator from a timestamp and enable/disable enhanced monitoring
 - ElasticBeanstalk API update: Apply and Describe Managed Actions
 - Kinesis Firehose API update: ElasticSearch destination support
 - DeviceFarm API update: support for UnmeteredRemoteAccessDevices
 - ACM API update: Tagging for certificates
 - EMR API update: shrink policies
 - IoT API update: select SQL engine
 - Route53Domains API update: ReachabilityEmail operations
 - EC2 API update: ModifyVpcPeeringConnectionOptions and docu