@@ -5,6 +5,7 @@ package Paws::DirectConnect::Interconnect;
   has InterconnectId => (is => 'ro', isa => 'Str', traits => ['Unwrapped'], xmlname => 'interconnectId' );
   has InterconnectName => (is => 'ro', isa => 'Str', traits => ['Unwrapped'], xmlname => 'interconnectName' );
   has InterconnectState => (is => 'ro', isa => 'Str', traits => ['Unwrapped'], xmlname => 'interconnectState' );
+  has LoaIssueTime => (is => 'ro', isa => 'Str', traits => ['Unwrapped'], xmlname => 'loaIssueTime' );
   has Location => (is => 'ro', isa => 'Str', traits => ['Unwrapped'], xmlname => 'location' );
   has Region => (is => 'ro', isa => 'Str', traits => ['Unwrapped'], xmlname => 'region' );
 
@@ -41,6 +42,13 @@ Paws::DirectConnect::Interconnect
 
 
 Valid values are: C<"requested">, C<"pending">, C<"available">, C<"down">, C<"deleting">, C<"deleted">
+
+=head2 LoaIssueTime => Str
+
+The time of the most recent call to DescribeInterconnectLoa for this
+Interconnect.
+
+
 
 =head2 Location => Str
 
